--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-COPY ./prisma /usr/src/app/prisma
+COPY ./prisma ./prisma
 
 RUN npm ci
 
 COPY . .
+
+RUN npx prisma db push
 
 CMD ["npm", "run", "dev"]
